Resolved inital login issues

--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,10 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-* {box-sizing: border-box;}
+
+* {
+    box-sizing: border-box;
+}
 @-webkit-keyframes charlieeee {
     from {
         background-position: top left;
@@ -87,7 +90,7 @@ textarea {
     }
 }
 .catchadream {
-    background-image: -webkit-linear-gradient(left, red, orange, yellow, green, lightgreen, green, yellow, orange, red, green,green,green,green,green,green,green,green,green,yellow, green, lightgreen, green, green);
+    background-image: -webkit-linear-gradient(left, red, orange, yellow, blue, lightgreen, green, yellow, orange, red, green, green, green, green, green, green, green, green, green, yellow, green, lightgreen, green, green);
     -webkit-animation: charlieeee 10s forwards linear infinite;
     animation: charlieeee 2.5s forwards linear infinite;
     background-size: 50% auto;
@@ -99,20 +102,33 @@ main > section {
     height: 100%;
 }
 main {
-    background:url(../img/bg.png)
+    background: url(../img/bg.png)
 }
 main > section {
     padding: 50px;
-    color:silver;
-    padding-bottom:0;
+    color: silver;
+    padding-bottom: 0;
 }
 main > section > .navbar {
     position: absolute;
-    top:0;
+    top: 0;
     width: 90%;
     background: black;
-    height:49px;
+    height: 49px;
     padding 5px;
-    
 }
-h1 {font-size: 80px;}
+#login {
+    float: left;
+}
+#chat {
+    position: absolute;
+    top: 0;
+    height: 80%;
+    background: white;
+    width: 254px;
+    overflow: scroll;
+    resize:both;
+}
+* h1 {
+    font-size: 80px;
+}
